--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
     "gh-pages": "^5.0.0",
     "jquery": "^3.7.0",
     "parcel": "^2.9.1",
+    "parcel-bundler": "^1.12.5",
     "popper.js": "^1.16.1"
   },
   "name": "test22",
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "start": "parcel ./*.html",
-    "predeploy": "rm -rf dist && parcel build ./*.html --public-url 'github.com/BRN-5/resepsiyon.git'",
-    "deploy": "gh-pages -d dist"
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "keywords": [],
   "author": "",
